--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"@mantine/core": "^7.17.8",
 		"@mantine/hooks": "^7.17.8",
 		"@radix-ui/react-dialog": "^1.1.15",
+		"@supabase/ssr": "^0.7.0",
+		"@supabase/supabase-js": "^2.76.1",
 		"clsx": "^2.1.1",
 		"next": "15.5.4",
 		"react": "^19.2.0",
@@ -33,6 +35,7 @@
 		"dprint": "^0.50.2",
 		"eslint": "^9.37.0",
 		"eslint-config-next": "15.5.4",
+		"prisma": "^6.18.0",
 		"typescript": "^5.9.3"
 	}
 }
