--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,9 @@ jobs:
       - name: 📦 Install dependencies
         run: pnpm install --store-dir=~/.pnpm-store
 
+      - name: 🔄 Generate Prisma Client
+        run: pnpm prisma generate
+
       - name: 🧹 Lint
         run: pnpm lint
 
