css fixes and added next.js mcp server

--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
 		"check-format": "dprint check"
 	},
 	"dependencies": {
-		"@blocknote/core": "^0.40.0",
-		"@blocknote/mantine": "^0.40.0",
-		"@blocknote/react": "^0.40.0",
+		"@blocknote/core": "^0.42.0",
+		"@blocknote/mantine": "^0.42.0",
+		"@blocknote/react": "^0.42.0",
 		"@mantine/core": "^7.17.8",
 		"@mantine/hooks": "^7.17.8",
 		"@prisma/client": "6.18.0",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@supabase/ssr": "^0.7.0",
 		"@supabase/supabase-js": "^2.76.1",
+		"@tiptap/extensions": "^3.10.7",
 		"clsx": "^2.1.1",
 		"next": "15.5.4",
 		"react": "^19.2.0",
