--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@mantine/hooks": "^7.17.8",
 		"@prisma/client": "6.18.0",
 		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-switch": "^1.2.6",
 		"@supabase/ssr": "^0.7.0",
 		"@supabase/supabase-js": "^2.76.1",
 		"@tiptap/extensions": "^3.10.7",
